src/test/deca/context/invalid/personalTests/testContextObjetSimple.deca
// Test la declaration d'un objet

class A {
    int a;
    string b;

    A() {
        a = 1;
        b = "test";
    }
}

{
    A a;
    a = new A();
    println(a.a + a.b);
}